# hashing

./: .gitignore  makefile  readme.md  setup.cfg  setup.py
hashing/: __init__.py  aquahash.h  cpython.pyi  hashing_cpy.cpp  hashing_cpy.h  hashing_cpy.pyi
test/: aquahash.py
