# Dedicated to the public domain under CC0: https://creativecommons.org/publicdomain/zero/1.0/.

[metadata]
name = hashing
version = 0.0.1
license = 'CC0 for the CPython extension; various permissive licenses for the hash function implementations.'
author = George King
author_email = george.w.king@gmail.com
url = https://github.com/gwk/hashing
description = 'Various hash functions: aquahash.'
keywords = hash hashing aquahash

[mypy]
python_version = 3.7
cache_dir = _build/mypy_cache

check_untyped_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = False
ignore_missing_imports = False
show_column_numbers = True
show_none_errors = True
strict_optional = True
warn_incomplete_stub = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[build]
build-base = _build

[bdist]
dist-dir = _build/dist

[sdist]
dist-dir = _build/dist
